2005-11-17  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* Documentation/user/changing-defaults.itely (Modifying context
	plug-ins): Add index for \with.

	* Documentation/user/music-glossary.tely (dal segno): Updated
	example to version >=2.6.

2005-11-16  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* Documentation/user/instrument-notation.itely (Printing chord
	names): Reorder \chordmode and \repeat in one example.

2005-11-16  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* Documentation/topdocs/NEWS.tely (Top): add note about
	refactoring.

	* lily/tie-formatting-problem.cc (find_optimal_tie_configuration):
	new function. Search region of 3 positions for best tie.
	(score_configuration): new function.
	(score_aptitude): new function.
	(generate_configuration): new function.
	(get_configuration): new function.
	(Tie_formatting_problem): new function

	* input/regression/page-top-space.ly: a6 for page-top-space demo. 

	* stepmake/aclocal.m4: use $(if ) for config-FOOF.make

	* THANKS: add Eduardo Vieira & Ralph Little

	* mf/feta-bolletjes.mf (solfa_quarter_width): make solfa heads
	narrower.

	* lily/include/tie-formatting-problem.hh (class
	Tie_formatting_problem): add Tie_details to
	Tie_formatting_problem. Update calling conventions.

	* stepmake/aclocal.m4: oops. Include $CONFIGFILE.make, not
	config.make.

	* Documentation/user/lilypond.tely: remove musedata2ly entry.

2005-11-16  Jürgen Reuter  <reuter@ipd.uka.de>

	* lily/ligature-engraver.cc, lily/include/ligature-engraver.hh,
	scm/define-context-properties.scm: Maintenance bugfix: make
	ligature brackets work again by removing obsolete ligature
	primitive callback push/pop.

	* scm/define-grobs.scm (LigatureBracket): Maintenance bugfix: do
	not call Tuplet_bracket::calc_direction.  Removed obsolete gap
	value.

2005-11-15  Jan Nieuwenhuizen  <janneke@gnu.org>

	* stepmake/aclocal.m4 (depth): Explain why absolute directory is
	used and do not call it a path.